# BA_Specular_Scanning

./: .gitignore  60d_orthographic_voronoi_1440.ply  EPI_hough.py  hdri_image.py  hough.py  hough_arbitrary_angle.py  hough_roadmap.py  hough_transform.py  image_augmentation.py  point_cloud.ply  point_cloud_1080.ply  point_cloud_1080_bam.ply  point_cloud_test.ply  visualize_gui.py
assets/hdrs/hall_and_dining__f76f7767-a0d2-4491-8d29-4a5b9b79ca1f/: hall_and_dining_room_2K_a2bbe556-60a7-4445-93d5-663c19f97110.exr
assets/hdrs/industrial_pipe__7e2d1fcb-ebb3-486c-bacc-f2758d5c24be/: industrial_pipe_&_valve_01_1K_62bcce27-6690-426f-8b5e-ab346dafdc01.exr
assets/materials/ar3dmat_procedur_b8d0e473-9ad9-446e-b067-d37ac4e6b0df/: ar3dmat_procedural_realistic_mirror_4937678c-5b43-443b-9e9d-fb6bd4070757.blend
assets/materials/metal08_pbr_194f50cd-c186-4acd-82ac-aaffce9dacd3/: metal08_pbr_2K_21397e67-fb88-4c4f-acff-0a85ba3a4591.blend
camera_acquisition/: CMakeLists.txt  compile_commands.json  pipeline.json  test.cpp
camera_acquisition/.cache/clangd/index/: test.cpp.B2B2CCBE86FE7843.idx
camera_acquisition/cmake/: CompilerWarnings.cmake  Doxygen.cmake  Sanitizer.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
enviroment_maps/: enviroment_map.py
